--- a/source/html/portfolio/thesacredfig.html
+++ b/source/html/portfolio/thesacredfig.html
@@ -1,4 +1,4 @@
-@@include('_header.html', { "title": "The Sacred Fig", "description": "Strategy branding and digital experience for The Sacred Fig", "body-class": "portfolio-page dark-bg full-screen-dark-bg", "data-page": "thesacredgig" })
+@@include('_header.html', { "title": "The Sacred Fig", "description": "Strategy branding and digital experience for The Sacred Fig", "body-class": "portfolio-page dark-bg full-screen-dark-bg", "data-page": "thesacredfig" })
 <div class="wrap">
   <section>
     <div id="title" class="project-title row" data-page="ora">
@@ -14,27 +14,27 @@
     <div class="portfolio">
 
       <div class="row">
-        <div class="col-xs-12 offset-xs-0 col-md-6 offset-md-6">
+        <div class="col-xs-8 offset-xs-0 col-md-6 offset-md-6">
           <img class="portfolio-item" src="/img/thesacredfig/lauren.jpg" alt="" title="The Sacred Fig">
         </div>
       </div>
       <div class="row">
-        <div class="col-xs-12 offset-xs-0 col-md-3 offset-md-3">
+        <div class="col-xs-4 offset-xs-8 col-md-3 offset-md-3">
           <img class="portfolio-item" src="/img/thesacredfig/lauren_2.jpg" alt="" title="The Sacred Fig">
         </div>
       </div>
       <div class="row">
-        <div class="col-xs-12 offset-xs-0 col-md-3 offset-md-0">
+        <div class="col-xs-4 offset-xs-8 col-md-3 offset-md-0">
           <img class="portfolio-item" src="/img/thesacredfig/sacredfig.svg" alt="" title="The Sacred Fig">
         </div>
       </div>
       <div class="row">
-        <div class="col-xs-12 offset-xs-0 col-md-9 offset-md-3">
+        <div class="col-xs-8 offset-xs-0 col-md-9 offset-md-3">
           <img class="" src="/img/thesacredfig/home.jpg" alt="" title="The Sacred Fig">
         </div>
       </div>
       <div class="row">
-        <div class="col-xs-12 offset-xs-0 col-md-3 offset-md-0">
+        <div class="col-xs-4 offset-xs-8 col-md-3 offset-md-0">
           <img class="portfolio-item" src="/img/thesacredfig/lauren-3.jpg" alt="" title="The Sacred Fig">
         </div>
       </div>
