--- a/source/html/index.html
+++ b/source/html/index.html
@@ -1,10 +1,14 @@
-@@include('_header.html', { "title": "Bruno", "description": "Page Description", "body-class": "home-page", "data-page": "home" })
+@@include('_header.html', { "title": "Austen Ezzell UX / UI", "description": "Austen Ezzell's portfolio and bio.", "body-class": "home-page", "data-page": "home" })
 
 <section class="page-container portfolio home-portfolio wrap">
   <div id="title" class="home-intro row" >
     <h2 class="col-xs-12  align-middle-xs custom-intro">Hi</h2>
   </div>
-  <div class="intro-space-holder vh-full"></div>
+  <div class="intro-space-holder vh-full">
+    <div class="description fixed-header">
+      <h2 class="h2 designer-dev align-xs-bottom"><a class="about-link mobile-project-title dd" href="/about/">Designer<br>Developer</a></h2>
+    </div>
+  </div>
   <a href="/portfolio/ora.html" class="portfolio-section section-ora portfolio-link">
     <div class="cursor-follow col-xs-8">
       <h3 class="h5 font-bold">ORA →</h3>
@@ -37,12 +41,12 @@
     </div>
     <div class="row">
       <div class="col-xs-4 offset-xs-0 col-md-4 offset-md-4">
-        <img src="/img/nextbit/gallery2.jpg" alt="">
+        <img class="select" src="/img/nextbit/gallery2.jpg" alt="">
       </div>
     </div>
     <div class="row">
       <div class="col-xs-4 offset-xs-0 col-md-4 offset-md-4">
-        <img class="select" src="/img/nextbit/gallery3.jpg" alt="">
+        <img src="/img/nextbit/gallery3.jpg" alt="">
       </div>
     </div>
   </a>
