--- a/source/html/portfolio/gogoro.html
+++ b/source/html/portfolio/gogoro.html
@@ -10,7 +10,7 @@
       <div class="portfolio-description col-xs-10">
         <p>We helped Gogoro introduce the world's first and only Smartscooter.</p>
         <p>Gogoro is a smart energy company based out of Taiwan that has created the electric scooter of the future. We worked closely with Gogoro's team to build their brand messaging and digital experience.</p>
-        <p>I was responsible for the UX/UI of the book a ride section and design for several pages &amp; components on the marketing side of the website.</p>
+        <p>I was responsible for the UX/UI of the <i>book a ride</i> section and UI for several other pages &amp; components of the website.</p>
         <p><a href="http://www.gogoro.com">gogoro.com</a></p>
       </div>
     </div>
@@ -24,7 +24,7 @@
 
       <div class="row">
         <div class="col-xs-8 offset-xs-4 col-md-4 offset-md-8">
-          <video class="portfolio-item" src="https://player.vimeo.com/external/163460920.hd.mp4?s=a1e586b4a3d80a463b639dcee25c86efb4813855&profile_id=119" autoplay loop poster="/img/nextbit/cloud.jpg" title="Gogoro"></video>
+          <video class="portfolio-item" src="https://player.vimeo.com/external/163460920.hd.mp4?s=a1e586b4a3d80a463b639dcee25c86efb4813855&profile_id=119" autoplay loop title="Gogoro"></video>
         </div>
       </div>
 
@@ -42,7 +42,7 @@
 
       <div class="row">
         <div class="col-xs-8 offset-xs-4 col-md-7 offset-md-5">
-          <video class="portfolio-item" src="/img/gogoro/gogoro-locator.mp4" autoplay loop poster="/img/nextbit/cloud.jpg" title="Gogoro book a test ride"></video>
+          <video class="portfolio-item" src="/img/gogoro/gogoro-locator.mp4" autoplay loop title="Gogoro book a test ride"></video>
         </div>
       </div>
 
