--- a/source/html/portfolio/ora.html
+++ b/source/html/portfolio/ora.html
@@ -8,7 +8,7 @@
     <div class="row">
       <div class="portfolio-description col-xs-10 transition-fadeout">
         <p>Can a connected smart device help you disconnect? We set out to create a device that helps us control the rhythm of our day, keeps us connected to what's important and limits our reliance on screens. </p>
-        <p>Ora was a Cinco sponsored digital / product collaboration I was responsible for the UX/UI of the companion application.</p>
+        <p>Ora was a Cinco sponsored digital / product collaboration. I was responsible for the UX/UI of the companion application.</p>
       </div>
     </div>
     <div class="portfolio">
@@ -21,12 +21,12 @@
 
       <div class="row">
         <div class="col-xs-8 offset-xs-0 col-md-6 offset-md-0">
-          <video class="portfolio-item" src="https://player.vimeo.com/external/167500442.hd.mp4?s=f934a9db1f0b95530442e2931891572d18c2b347&profile_id=119" autoplay loop poster="//cincodesign.com/site-content/work/hora/Hora_App_Mobile.jpg" title="Alarm Themes and Settings"></video>
+          <video class="portfolio-item" src="https://player.vimeo.com/external/167500442.hd.mp4?s=f934a9db1f0b95530442e2931891572d18c2b347&profile_id=119" autoplay loop title="Alarm Themes and Settings"></video>
         </div>
       </div>
       <div class="row">
         <div class="col-xs-8 offset-xs-0 col-md-6 offset-md-0">
-          <video class="portfolio-item" src="https://player.vimeo.com/external/167498190.hd.mp4?s=091c3e983743f4596e12cd96fab817112b4b32bf&amp;profile_id=119" autoplay loop poster="//cincodesign.com/site-content/work/hora/Hora_App_Mobile.jpg" title="Brightness and Color"></video>
+          <video class="portfolio-item" src="https://player.vimeo.com/external/167498190.hd.mp4?s=091c3e983743f4596e12cd96fab817112b4b32bf&amp;profile_id=119" autoplay loop title="Brightness and Color"></video>
         </div>
       </div>
 
