--- a/source/html/portfolio/theworldsgame.html
+++ b/source/html/portfolio/theworldsgame.html
@@ -6,7 +6,7 @@
     </div>
     <div class="row">
       <div class="portfolio-description col-xs-10">
-        <p>Soccer, photography and travel are some of my favorite things. I have learned so much through the pursuit of these passions. Maybe most unexpected outcome has been the realization that no matter where I go, whatever pitch I step foot on, I feel at home knowing that although I may have nothing else in common with the others on the field, we share a similar passion.</p>
+        <p>Soccer, photography and travel are some of my favorite things. I have learned so much through the pursuit of these passions. Maybe the most unexpected outcome has been the realization that no matter where I go, whatever pitch I step foot on, I feel at home. Although I may have nothing else in common with the others on the field, we share a similar passion.</p>
       </div>
     </div>
     <div class="portfolio">
