--- a/source/html/_templates/_footer.html
+++ b/source/html/_templates/_footer.html
@@ -1,9 +1,12 @@
     <footer class="wrap footer">
       <div class="row vh-full transition-fadeout">
         <div class="col-xs-12 col-lg-8 offset-lg-0 align-bottom-xs">
-          <p class="copy-module h2"><a href="mailto:austenezzell@gmail.com">email</a><br>
-          <a href="https://www.linkedin.com/in/austenezzell">linkedIn</a><br>
-          <a href="https://www.instagram.com/a.ezzy/">Instagram</a></p>
+          <p class="copy-module h2">
+            <a class="about-link" href="/about">Bio</a><br>
+            <a href="mailto:austenezzell@gmail.com">Email</a><br>
+            <a href="https://www.linkedin.com/in/austenezzell">LinkedIn</a><br>
+            <a href="https://www.instagram.com/a.ezzy/">Instagram</a>
+          </p>
         </div>
       </div>
     </footer>
