--- a/source/html/index.html
+++ b/source/html/index.html
@@ -11,7 +11,7 @@
   </div>
   <a href="/portfolio/ora.html" class="portfolio-section section-ora portfolio-link">
     <div class="cursor-follow col-xs-8">
-      <h3 class="h5 font-bold">ORA →</h3>
+      <h3 class="h5">Ora</h3>
     </div>
     <div class="row ">
       <div class="col-xs-4 offset-xs-8 col-md-8 offset-md-4">
@@ -32,7 +32,7 @@
 
   <a href="/portfolio/nextbit.html" class="portfolio-section section-nextbit portfolio-link">
     <div class="cursor-follow col-xs-8 offset-xs-4">
-      <h3 class="h5 font-bold">NEXTBIT →</h3>
+      <h3 class="h5">Nextbit</h3>
     </div>
     <div class="row">
       <div class="col-xs-4 offset-xs-4 col-md-4 offset-md-0">
@@ -53,7 +53,7 @@
 
   <a href="/portfolio/theworldsgame.html" class="portfolio-section section-theworldsgame portfolio-link">
     <div class="cursor-follow col-xs-8 offset-xs-4">
-      <h3 class="h5 font-bold">THE WORLDS<br>GAME →</h3>
+      <h3 class="h5">The World's Game</h3>
     </div>
     <div class="row">
       <div class="col-xs-4 offset-xs-4 col-md-8 offset-md-4">
@@ -74,7 +74,7 @@
 
   <a href="/portfolio/gogoro.html" class="portfolio-section section-gogoro portfolio-link">
     <div class="cursor-follow col-xs-8">
-      <h3 class="h5 font-bold">GOGORO →</h3>
+      <h3 class="h5">Gogoro</h3>
     </div>
     <div class="row">
       <div class="col-xs-4 offset-xs-8 col-md-6 offset-md-6">
@@ -90,7 +90,7 @@
 
   <a href="/portfolio/thesacredfig.html" class="portfolio-section section-thesacredfig portfolio-link">
     <div class="cursor-follow col-xs-8">
-      <h3 class="h5 font-bold">THE SACRED FIG →</h3>
+      <h3 class="h5">The Sacred Fig</h3>
     </div>
     <div class="row">
       <div class="col-xs-4 offset-xs-8 col-md-2 offset-md-4">
