--- a/source/html/_templates/_header.html
+++ b/source/html/_templates/_header.html
@@ -8,7 +8,7 @@
     <!-- build:css /css/styles.min.css -->
     <link rel="stylesheet" href="/css/styles.css" media="screen" charset="utf-8">
     <!-- endbuild -->
-    <link href="https://fonts.googleapis.com/css?family=Lora" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Lora:400,400i|Work+Sans:400,500" rel="stylesheet">
   </head>
   <body>
 
