--- a/source/html/portfolio/theworldsgame.html
+++ b/source/html/portfolio/theworldsgame.html
@@ -190,6 +190,11 @@
           <img class="portfolio-item" src="/img/worldsgame/33.jpg" alt="" title="Portland Oregon 2016">
         </div>
       </div>
+      <div class="row">
+        <div class="col-xs-4 offset-xs-8 col-md-6 offset-md-6">
+          <img class="portfolio-item" src="/img/worldsgame/34.jpg" alt="" title="Oregon 2016">
+        </div>
+      </div>
       <div class="overlay row">
         <div class="col-xs-10 offset-xs-1 col-sm-8 offset-sm-2 col-md-6 offset-md-3 align-middle-xs overlay-container" title="Smart Light"></div>
         <h6 class="img-title"></h6>
