added gogoro sport

--- a/source/html/portfolio/gogoro.html
+++ b/source/html/portfolio/gogoro.html
@@ -10,11 +10,27 @@
       <div class="portfolio-description col-xs-10">
         <p>We helped Gogoro introduce the world's first and only Smartscooter.</p>
         <p>Gogoro is a smart energy company based out of Taiwan that has created the electric scooter of the future. We worked closely with Gogoro's team to build their brand messaging and digital experience.</p>
-        <p>I was responsible for the UX/UI of the <i>book a ride</i> section and UI for several other pages &amp; components of the website.</p>
+        <p>My role: Design lead for Gogoro Sport, UX/UI of the <i>book a ride</i> section and UI for several other pages &amp; components of the website.</p>
         <p><a href="http://www.gogoro.com">gogoro.com</a></p>
       </div>
     </div>
     <div class="portfolio">
+
+      <div class="row">
+        <div class="col-xs-4 offset-xs-0 col-md-8 offset-md-0">
+          <img class="portfolio-item" src="/img/gogoro/sport.jpg" alt="" title="Gogoro Sport">
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-xs-4 offset-xs-0 col-md-4 offset-md-8">
+          <img class="portfolio-item" src="/img/gogoro/sport_2.jpg" alt="" title="Gogoro Sport">
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-xs-4 offset-xs-0 col-md-8 offset-md-0">
+          <img class="portfolio-item" src="/img/gogoro/sport_3.jpg" alt="" title="Gogoro Sport">
+        </div>
+      </div>
 
       <div class="row">
         <div class="col-xs-4 offset-xs-0 col-md-8 offset-md-0">
