--- a/source/html/_templates/_footer.html
+++ b/source/html/_templates/_footer.html
@@ -19,5 +19,15 @@
     <!-- build:js /js/scripts.min.js -->
     <script type="text/javascript" src="/js/bundle.js"></script>
     <!-- endbuild -->
+    <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+      ga('create', 'UA-10860438-1', 'auto');
+      ga('send', 'pageview');
+
+    </script>
   </body>
 </html>
