--- a/source/html/index.html
+++ b/source/html/index.html
@@ -9,6 +9,23 @@
       <h2 class="h2 designer-dev align-xs-bottom"><a class="about-link mobile-project-title dd" href="/about/">Designer<br>Developer</a></h2>
     </div>
   </div>
+
+  <a href="/portfolio/gogoro.html" class="portfolio-section section-gogoro portfolio-link">
+    <div class="cursor-follow col-xs-8">
+      <h3 class="h5">Gogoro</h3>
+    </div>
+    <div class="row">
+      <div class="col-xs-4 offset-xs-8 col-md-8 offset-md-4">
+        <img class="select" src="/img/gogoro/sport.jpg" alt="">
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-xs-4 offset-xs-8 col-md-4 offset-md-0">
+        <img src="/img/gogoro/hero.jpg" alt="">
+      </div>
+    </div>
+  </a>
+
   <a href="/portfolio/ora.html" class="portfolio-section section-ora portfolio-link">
     <div class="cursor-follow col-xs-8">
       <h3 class="h5">Ora</h3>
@@ -68,22 +85,6 @@
     <div class="row">
       <div class="col-xs-4 offset-xs-4 col-md-2 offset-md-4">
         <img src="/img/worldsgame/3.jpg" alt="">
-      </div>
-    </div>
-  </a>
-
-  <a href="/portfolio/gogoro.html" class="portfolio-section section-gogoro portfolio-link">
-    <div class="cursor-follow col-xs-8">
-      <h3 class="h5">Gogoro</h3>
-    </div>
-    <div class="row">
-      <div class="col-xs-4 offset-xs-8 col-md-6 offset-md-6">
-        <img src="/img/gogoro/hero.jpg" alt="">
-      </div>
-    </div>
-    <div class="row">
-      <div class="col-xs-4 offset-xs-8 col-md-6 offset-md-6">
-        <img class="select" src="/img/gogoro/frt.jpg" alt="">
       </div>
     </div>
   </a>
