page title updates to include role

--- a/source/html/portfolio/nextbit.html
+++ b/source/html/portfolio/nextbit.html
@@ -3,7 +3,7 @@
 <div class="wrap">
   <section>
     <div id="title" class="project-title row" data-page="ora">
-      <h2 class="col-xs-12 align-middle-xs">Nextbit</h2>
+      <h2 class="col-xs-12 align-middle-xs">Nextbit <span>UX / UI / Art Direction</h2>
     </div>
     <div class="row">
       <div class="portfolio-description col-xs-10">
