--- a/source/html/portfolio/thesacredfig.html
+++ b/source/html/portfolio/thesacredfig.html
@@ -2,7 +2,7 @@
 <div class="wrap">
   <section>
     <div id="title" class="project-title row" data-page="ora">
-      <h2 class="col-xs-12 align-middle-xs">The Sacred Fig</h2>
+      <h2 class="col-xs-12 align-middle-xs">The Sacred Fig <span>UX / UI / Dev</span></h2>
     </div>
     <div class="row">
       <div class="portfolio-description col-xs-10">
