--- a/source/html/portfolio/gogoro.html
+++ b/source/html/portfolio/gogoro.html
@@ -4,7 +4,7 @@
 <div class="wrap">
   <section>
     <div id="title" class="project-title row" data-page="ora">
-      <h2 class="col-xs-12 align-middle-xs">Gogoro</h2>
+      <h2 class="col-xs-12 align-middle-xs">Gogoro<span class="">UX / UI / Art Direction</span></h2>
     </div>
     <div class="row">
       <div class="portfolio-description col-xs-10">
@@ -17,7 +17,7 @@
     <div class="portfolio">
 
       <div class="row">
-        <div class="col-xs-4 offset-xs-0 col-md-8 offset-md-0">
+        <div class="col-xs-8 offset-xs-4 col-md-8 offset-md-0">
           <img class="portfolio-item" src="/img/gogoro/sport.jpg" alt="" title="Gogoro Sport">
         </div>
       </div>
@@ -27,7 +27,7 @@
         </div>
       </div>
       <div class="row">
-        <div class="col-xs-4 offset-xs-0 col-md-8 offset-md-0">
+        <div class="col-xs-4 offset-xs-4 col-md-8 offset-md-0">
           <img class="portfolio-item" src="/img/gogoro/sport_3.jpg" alt="" title="Gogoro Sport">
         </div>
       </div>
