--- a/source/html/portfolio/ora.html
+++ b/source/html/portfolio/ora.html
@@ -3,7 +3,7 @@
 <div class="wrap" id="page-content">
   <section>
     <div id="title" class="project-title row" data-page="ora">
-      <h2 class="col-xs-12 align-middle-xs">Ora</h2>
+      <h2 class="col-xs-12 align-middle-xs">Ora <span>UX / UI</span></h2>
     </div>
     <div class="row">
       <div class="portfolio-description col-xs-10 transition-fadeout">
