--- a/source/html/portfolio/theworldsgame.html
+++ b/source/html/portfolio/theworldsgame.html
@@ -2,7 +2,7 @@
 <div class="wrap">
   <section>
     <div class="project-title row">
-      <h2 class="col-xs-12 align-middle-xs ">The World's Game</h2>
+      <h2 class="col-xs-12 align-middle-xs ">The World's Game <span>Photography / Soccer</span></h2>
     </div>
     <div class="row">
       <div class="portfolio-description col-xs-10">
