--- a/source/html/index.html
+++ b/source/html/index.html
@@ -26,6 +26,22 @@
     </div>
   </a>
 
+  <a href="/portfolio/the-mission.html" class="portfolio-section section-themission portfolio-link">
+    <div class="cursor-follow col-xs-8">
+      <h3 class="h5">The Mission</h3>
+    </div>
+    <div class="row">
+      <div class="col-xs-8 offset-xs-0 col-md-4 offset-md-4">
+        <img class="select" src="/img/themission/hero.jpg" alt="">
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-xs-4 offset-xs-8 col-md-4 offset-md-0">
+        <img src="/img/themission/surf.jpg" alt="">
+      </div>
+    </div>
+  </a>
+
   <a href="/portfolio/ora.html" class="portfolio-section section-ora portfolio-link">
     <div class="cursor-follow col-xs-8">
       <h3 class="h5">Ora</h3>
