--- a/source/html/portfolio/the-mission.html
+++ b/source/html/portfolio/the-mission.html
@@ -7,8 +7,8 @@
     </div>
     <div class="row">
       <div class="portfolio-description col-xs-10 transition-fadeout">
-        <p>AndroidWear for action sports. We worked with the team at Nixon to zero in on the details essential to riders and surfers. With emphasis on glancability and contextual notifications we took what was most important to riders and designed watch faces that stayed true to Nixon's design ethos and history.
-        <p>I worked on the UX and UI of the watch faces.</p>
+        <p>AndroidWear for action sports. We worked with the team at Nixon to zero in on the details essential to riders and surfers. With emphasis on glanceability and contextual notifications, we took what was most important to riders and designed watch faces that stayed true to Nixon's design ethos and history.</p>
+        <p>I was responsible for the UX and UI of the watch faces.</p>
       </div>
     </div>
     <div class="portfolio">
