added cozmo portfolio item

--- a/source/html/_templates/_header.html
+++ b/source/html/_templates/_header.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="@@description">
     <title>@@title</title>
+    <link rel="apple-touch-icon" href="/icon.png">
     <!-- build:css /css/styles.min.css -->
     <link rel="stylesheet" href="/css/styles.css" media="screen" charset="utf-8">
     <!-- endbuild -->
