--- a/source/html/_templates/_portfolio-nav.html
+++ b/source/html/_templates/_portfolio-nav.html
@@ -2,10 +2,11 @@
   <ul class="col-xs-12 offset-xs-0 col-lg-8 offset-lg-2 col-xl-6 offset-xl-3">
     <li><a class="home-link" href="/">All Recent Work <span>2014-2016</span></a></li>
     <li><a class="nav-gogoro nav-link" data-transitionImg="/img/gogoro/sport.jpg" href="/portfolio/gogoro.html">Gogoro <span>2016</span></a></li>
-    <li><a class="nav-gogoro nav-link" data-transitionImg="/img/themission/hero.jpg" href="/portfolio/the-mission.html">The Mission <span>2016</span></a></li>        
+    <li><a class="nav-themission nav-link" data-transitionImg="/img/themission/hero.jpg" href="/portfolio/the-mission.html">The Mission <span>2016</span></a></li>
     <li><a class="nav-ora nav-link" data-transitionImg="/img/ora/hora_profile.jpg" href="/portfolio/ora.html">Ora <span>2016</span></a></li>
     <li><a class="nav-nextbit nav-link" data-transitionImg="/img/nextbit/gallery2.jpg" href="/portfolio/nextbit.html">Nextbit <span>2016</span></a></li>
     <li><a class="nav-theworldsgame nav-link" data-transitionImg="/img/worldsgame/hero.jpg" href="/portfolio/theworldsgame.html">The World's Game<span>2016</span></a></li>
+    <li><a class="nav-cozmo nav-link" data-transitionImg="/img/cozmo/cozmo_internal.jpg" href="/portfolio/cozmo.html">Cozmo<span>2016</span></a></li>
     <li><a class="nav-thesacredfig nav-link" data-transitionImg="/img/thesacredfig/lauren_2.jpg" href="/portfolio/thesacredfig.html">The Sacred Fig <span>2014</span></a></li>
     <li><a class="bio nav-about about-link" data-transitionImg="/img/worldsgame/19.jpg" href="/about/">About me</a></li>
   </ul>
