--- a/source/html/about/index.html
+++ b/source/html/about/index.html
@@ -1,4 +1,4 @@
-@@include('_header.html', { "title": "Bio", "description": "Page Description", "body-class": "about-page", "data-page": "about" })
+@@include('_header.html', { "title": "Bio / Austen Ezzell", "description": "About Austen Ezzell", "body-class": "about-page", "data-page": "about" })
 
 <div class="wrap" id="page-about">
   <section>
