--- a/source/html/index.html
+++ b/source/html/index.html
@@ -1,4 +1,4 @@
-@@include('_header.html', { "title": "Austen Ezzell UX / UI", "description": "Austen Ezzell's portfolio and bio.", "body-class": "home-page", "data-page": "home" })
+@@include('_header.html', { "title": "Austen Ezzell / UX / UI", "description": "Austen Ezzell's portfolio and bio.", "body-class": "home-page", "data-page": "home" })
 
 <section class="page-container portfolio home-portfolio wrap">
   <div id="title" class="home-intro row" >
@@ -101,6 +101,22 @@
     <div class="row">
       <div class="col-xs-4 offset-xs-4 col-md-2 offset-md-4">
         <img src="/img/worldsgame/3.jpg" alt="">
+      </div>
+    </div>
+  </a>
+
+  <a href="/portfolio/cozmo.html" class="portfolio-section section-cozmo portfolio-link">
+    <div class="cursor-follow col-xs-8 offset-xs-4">
+      <h3 class="h5">Cozmo</h3>
+    </div>
+    <div class="row">
+      <div class="col-xs-4 offset-xs-4 col-md-8 offset-md-4">
+        <video src="https://player.vimeo.com/external/191726750.hd.mp4?s=9ec894877980946c76af7715c3d4006d57711851&profile_id=119" autoplay loop poster="/img/cozmo/cozmo_internal.jpg"></video>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-xs-4 offset-xs-8 col-md-4 offset-md-0">
+        <img class="select" src="/img/cozmo/cozmo_splash.jpg" alt="">
       </div>
     </div>
   </a>
