--- a/source/html/portfolio/gogoro.html
+++ b/source/html/portfolio/gogoro.html
@@ -1,4 +1,4 @@
-@@include('_header.html', { "title": "Gogoro", "description": "UX / UI for Gogoro", "body-class": "portfolio-page dark-bg full-screen-dark-bg", "data-page": "gogoro" })
+@@include('_header.html', { "title": "Gogoro / Austen Ezzell", "description": "UX / UI for Gogoro", "body-class": "portfolio-page dark-bg full-screen-dark-bg", "data-page": "gogoro" })
 
 
 <div class="wrap">
@@ -8,10 +8,10 @@
     </div>
     <div class="row">
       <div class="portfolio-description col-xs-10">
-        <p>We helped Gogoro introduce the world's first and only Smartscooter.</p>
+        <p>Cinco helped Gogoro introduce the world's first and only Smartscooter.</p>
         <p>Gogoro is a smart energy company based out of Taiwan that has created the electric scooter of the future. We worked closely with Gogoro's team to build their brand messaging and digital experience.</p>
         <p>My role: Design lead for Gogoro Sport, UX/UI of the <i>book a ride</i> section and UI for several other pages &amp; components of the website.</p>
-        <p><a href="http://www.gogoro.com">gogoro.com</a></p>
+        <p></p>
       </div>
     </div>
     <div class="portfolio">
