--- a/source/html/portfolio/nextbit.html
+++ b/source/html/portfolio/nextbit.html
@@ -1,4 +1,4 @@
-@@include('_header.html', { "title": "Nextbit", "description": "Strategy UX and UI for Nextbit", "body-class": "portfolio-page dark-bg full-screen-dark-bg", "data-page": "nextbit" })
+@@include('_header.html', { "title": "Nextbit / Austen Ezzell", "description": "UX / UI for Nextbit", "body-class": "portfolio-page dark-bg full-screen-dark-bg", "data-page": "nextbit" })
 
 <div class="wrap">
   <section>
