--- a/source/html/portfolio/ora.html
+++ b/source/html/portfolio/ora.html
@@ -1,4 +1,4 @@
-@@include('_header.html', { "title": "Ora", "description": "Strategy UX and UI for Ora", "body-class": "portfolio-page dark-bg full-screen-dark-bg", "data-page": "ora" })
+@@include('_header.html', { "title": "Ora / Austen Ezzell", "description": "UX / UI for Ora", "body-class": "portfolio-page dark-bg full-screen-dark-bg", "data-page": "ora" })
 
 <div class="wrap" id="page-content">
   <section>
