--- a/source/html/portfolio/the-mission.html
+++ b/source/html/portfolio/the-mission.html
@@ -1,4 +1,4 @@
-@@include('_header.html', { "title": "The Mission", "description": "UX and UI for The Mission", "body-class": "portfolio-page dark-bg full-screen-dark-bg", "data-page": "themission" })
+@@include('_header.html', { "title": "The Mission / Austen Ezzell", "description": "UX / UI for The Mission", "body-class": "portfolio-page dark-bg full-screen-dark-bg", "data-page": "themission" })
 
 <div class="wrap" id="page-content">
   <section>
