--- a/source/html/portfolio/thesacredfig.html
+++ b/source/html/portfolio/thesacredfig.html
@@ -1,4 +1,4 @@
-@@include('_header.html', { "title": "The Sacred Fig", "description": "Strategy branding and digital experience for The Sacred Fig", "body-class": "portfolio-page dark-bg full-screen-dark-bg", "data-page": "thesacredfig" })
+@@include('_header.html', { "title": "The Sacred Fig / Austen Ezzell", "description": "Strategy / branding / digital experience for The Sacred Fig", "body-class": "portfolio-page dark-bg full-screen-dark-bg", "data-page": "thesacredfig" })
 <div class="wrap">
   <section>
     <div id="title" class="project-title row" data-page="ora">
