--- a/source/html/portfolio/theworldsgame.html
+++ b/source/html/portfolio/theworldsgame.html
@@ -1,4 +1,4 @@
-@@include('_header.html', { "title": "The World's Game", "description": "Soccer fields around the world", "body-class": "portfolio-page dark-bg full-screen-dark-bg", "data-page": "theworldsgame" })
+@@include('_header.html', { "title": "The World's Game / Austen Ezzell", "description": "Soccer fields around the world", "body-class": "portfolio-page dark-bg full-screen-dark-bg", "data-page": "theworldsgame" })
 <div class="wrap">
   <section>
     <div class="project-title row">
