added boa story

--- a/source/html/index.html
+++ b/source/html/index.html
@@ -10,6 +10,22 @@
     </div>
   </div>
 
+  <a href="/portfolio/boa.html" class="portfolio-section section-boa portfolio-link">
+    <div class="cursor-follow col-xs-8">
+      <h3 class="h5">Boa</h3>
+    </div>
+    <div class="row">
+      <div class="col-xs-4 offset-xs-8 col-md-8 offset-md-4">
+        <img class="select" src="/img/boa/hero.jpg" alt="">
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-xs-4 offset-xs-8 col-md-4 offset-md-0">
+        <img src="/img/boa/boa-1.jpg" alt="">
+      </div>
+    </div>
+  </a>
+
   <a href="/portfolio/gogoro.html" class="portfolio-section section-gogoro portfolio-link">
     <div class="cursor-follow col-xs-8">
       <h3 class="h5">Gogoro</h3>
