--- a/source/html/portfolio/boa.html
+++ b/source/html/portfolio/boa.html
@@ -39,7 +39,7 @@
 
       <div class="row">
         <div class="col-xs-8 offset-xs-2 col-md-8 offset-md-2">
-          <img class="portfolio-item" src="/img/boa/desktop-1.jpg" alt="" title="Boa">
+          <img class="" src="/img/boa/desktop-1.jpg" alt="" title="Boa">
         </div>
       </div>
 
@@ -51,7 +51,7 @@
 
       <div class="row">
         <div class="col-xs-8 offset-xs-2 col-md-8 offset-md-2">
-          <img class="portfolio-item" src="/img/boa/desktop-2.jpg" alt="" title="Boa">
+          <img class="" src="/img/boa/desktop-2.jpg" alt="" title="Boa">
         </div>
       </div>
 
