--- a/source/html/index.html
+++ b/source/html/index.html
@@ -5,7 +5,7 @@
     <h2 class="col-xs-12  align-middle-xs custom-intro">Hi</h2>
   </div>
   <div class="intro-space-holder vh-full">
-    <div class="description fixed-header">
+    <div class="description fixed-header scroll-fade-out">
       <h2 class="h2 designer-dev align-xs-bottom"><a class="about-link mobile-project-title dd" href="/about/">Designer<br>Developer</a></h2>
     </div>
   </div>
