--- a/source/html/about/index.html
+++ b/source/html/about/index.html
@@ -8,8 +8,8 @@
     <div class="row">
       <div class="col-xs-10">
         <div class="copy-module about-content transition-fadeout">
-          <p>I’m a designer <b>/</b> art director <b>/</b> front-end developer focused on crafting useful and enjoyable digital product experiences. I have a BS in economics and experience in e-commerce, advertising, UX, UI and front-end development.</p>
-          <p>I am currently UX Lead at <a href="http://www.cincodesign.com">Cinco Design</a> in Portland OR. At Cinco, I help shape the way we approach digital work. I touch all aspects of the our digital business, including strategy, creative, development and building and sustaining client relationships. I have had the opportunity to work with amazing clients, talented project managers, strategists, designers and developers, in an environment that places huge importance on the power of design.</p>
+          <p>I’m a designer <b>/</b> art director <b>/</b> front-end developer focused on crafting useful and enjoyable digital experiences. I have a BS in economics and experience in e-commerce, advertising, UX, UI and front-end development.</p>
+          <p>I am currently Creative Director of Digital Experience at <a href="http://www.cincodesign.com">Cinco Design</a> in Portland OR. At Cinco, I help shape the way we approach digital work. I touch all aspects of the our digital business, including strategy, creative, development and building and sustaining client relationships. I have had the opportunity to work with amazing clients, talented project managers, strategists, designers and developers, in an environment that places huge importance on the power of design.</p>
           <p>I rely on a constantly evolving user-centered design process that champions user needs through prototyping, learning and collaboration. I get excited about focused and smart design solutions and my favorite digital experiences are the ones that contain refinements to the things that most people don't notice at first glance. I think good UX conveys emotion and helps define relationships between brands and users.</p>
         </div>
       </div>
